<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@layout/fragment_homepage">

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.example.INTIFoodie.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.INTIFoodie.Me_Fragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.INTIFoodie.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.INTIFoodie.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_homepage" />

</navigation>