<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:context=".Me_Fragment"
    tools:visibility="visible">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="412dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/red"
        android:label="@string/app_name"
        android:minHeight="40dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="Logout"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logoutIcon"
        android:src="@drawable/baseline_login_24"
        tools:ignore="HardcodedText,MissingConstraints"/>

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="148dp"
        android:layout_height="30dp"
        android:text="User Profile"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="400dp"
        android:layout_height="410dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="356dp"
                android:layout_height="41dp"
                android:text="@string/Name"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Age"
                android:textSize="20sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userID"
                android:layout_width="333dp"
                android:layout_height="46dp"
                android:text="@string/UserID"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/identity"
                android:layout_width="333dp"
                android:layout_height="39dp"
                android:text="@string/Gender"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="358dp"
            android:layout_height="77dp">

            <TextView
                android:id="@+id/wallet"
                android:layout_width="333dp"
                android:layout_height="39dp"
                android:clickable="true"
                android:onClick="onIBMClick"
                android:text="Wallet"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/app"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="INTIMA FOODIE"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
